# runewarp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.cargo/: audit.toml
.githooks/: pre-commit
.github/: actionlint.yaml  release-allowed-signers
.github/workflows/: ci.yml  docker-images.yml  images.yml  release-preview.yml  release.yml
docker/: Caddyfile  client-config.toml.template  docker-compose.yml  prepare.sh  server-config.toml.template  smoke.sh  test-prepare.sh
docs/: architecture.md  configuration.md  managed.md  protocol.md  release-automation.md  release-guide.md  roadmap.md  security.md  usage.md
docs/adr/: 0001-server-authoritative-routing-with-hostname-mirroring.md  0002-manual-server-ca-and-exclusive-client-trust.md  0003-trusted-main-docker-cache-layering.md  0004-managed-tunnel-id-continuity.md  0005-proxy-v2-address-boundaries-and-stream-framing.md
docs/agents/: domain.md  issue-tracker.md
docs/research/: h3-reverse-connect-reference.md  h3-zero-rtt-assignment-prototype.md  reverse-connect-conformance.md  server-initiated-h3-association-streams.md
examples/: h3_receive_slots_prototype.rs
examples/docker/: README.md  docker-compose.yml  prepare.rb  prepare.sh  smoke.rb  smoke.sh  test-prepare.sh
examples/docker/caddy/: Caddyfile
examples/docker/client/: config.toml.template
examples/one-sided-catch-all/: Caddyfile  README.md  compose.yaml  smoke.sh
scripts/: audit-dependencies  check-crates-io-release  check-distribution  check-docker-hub-tag  check-docker-hub-tag.rb  check-docker-hub-tag.sh  check-github-check-run  check-github-check-run.rb  check-linux-ci.sh  check_distribution  check_docker_hub_tag  ci  ci.rb  ci.sh  docker-example  docker-image  docker-image.rb  docker-image.sh  docker_example  docker_image  export-oci-image.sh  lib-changelog.sh  lib-docker-hub.sh  lib-release-metadata.sh  lib.sh  lint-workflows  lint-workflows.rb  lint-workflows.sh  lint_workflows  merge-docker-manifest  package-linux-release.sh  render-release-notes  render-release-notes.rb  render-release-notes.sh  render_release_notes  resolve-release-metadata  resolve-release-metadata.sh  setup-git-hooks.sh  test-automation  test-automation.rb  (+17 more)
scripts/lib/: runewarp.rb
scripts/test/: audit_dependencies_test.rb  distribution_checks_test.rb  docker_example_test.rb  docker_hub_test.rb  entrypoint_usage_test.rb  release_docs_test.rb  release_gates_test.rb  release_metadata_test.rb  workflow_contract_test.rb  workflow_helpers_test.rb  workflow_lint_test.rb
src/: acme.rs  cert_commands.rs  cert_file_ops.rs  cli.rs  client_admission.rs  client_hello.rs  client_public_cert.rs  client_runtime.rs  config.rs  config_hints.rs  control_address.rs  error_handling.rs  hostname.rs  identity.rs  lib.rs  main.rs  opaque_control_token.rs  paths.rs  phase1.rs  proxy.rs  proxy_protocol.rs  quic.rs  reconnect_policy.rs  runtime_log.rs  server_address.rs  server_admission.rs  server_cert.rs  server_identity.rs  settings.rs  settings_hints.rs  shutdown.rs  startup.rs  tls_material.rs  trust.rs  tunnel_framing.rs  tunnel_id.rs  version_info.rs
src/client/: address_controller.rs  address_worker.rs  assignment_convergence.rs  backend.rs  config_resolution.rs  managed_adapter.rs  mod.rs  service.rs  settings_resolution.rs  stream_limits.rs  termination_tls.rs  tunnel_stream.rs
src/commands/: certs.rs  mod.rs
src/config/: client.rs  mod.rs  server.rs
src/config_preparation/: client.rs  server.rs
src/managed_session/: adapter.rs  connection.rs  input.rs  limits.rs  mod.rs  reconcile.rs  role.rs  session.rs  snapshot.rs  sse.rs  status.rs  timing.rs  tls.rs
src/server/: active_client.rs  admission.rs  authorization.rs  ingress.rs  managed_adapter.rs  mod.rs  readiness.rs  tunnel_registry.rs  visitor_decision.rs  visitor_router.rs  visitor_stream.rs
test/: docker_example_test.rb  docker_hub_test.rb  install_surfaces_test.rb  release_docs_test.rb  release_gates_test.rb  release_metadata_test.rb  workflow_contract_test.rb  workflow_lint_test.rb
test/support/: test_helper.rb
tests/: client_cli.rs  client_config.rs  client_config_resolution.rs  client_identity_auth.rs  client_identity_cli.rs  client_public_cert_cli.rs  client_settings.rs  client_settings_resolution.rs  client_startup.rs  config_module.rs  config_naming.rs  config_preparation_projections.rs  control_config.rs  h3_reverse_connect_reference.rs  h3_zero_rtt_assignment.rs  identity_generation.rs  install_surface_scripts.rs  keygen_cli.rs  main_cli.rs  managed_client_assignment.rs  managed_server_authorization.rs  managed_session_apply.rs  managed_session_downlink.rs  phase1_e2e.rs  release_gate_scripts.rs  release_metadata_scripts.rs  release_workflow_contract.rs  runtime_e2e.rs  server_cert_cli.rs  server_cli.rs  server_config.rs  server_settings.rs  server_startup.rs  version_info_contract.rs
tests/common/: mod.rs
(+25 files in other folders)
