[package]
name = "runewarp"
version = "0.1.0"
edition = "2024"
description = "Private tunneling for TLS passthrough"
readme = "README.md"
homepage = "https://runewarp.com"
repository = "https://github.com/runewarp/runewarp"
license = "Apache-2.0"
keywords = ["tunnel", "port-forwarding", "remote-access", "tls-passthrough", "nat-traversal"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
quinn = { version = "0.11.9", default-features = false, features = ["log", "runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23.35", default-features = false, features = ["logging", "ring", "std", "tls12"] }
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
rcgen = "0.14.8"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "ring", "tls12"] }

[[bin]]
name = "runewarp"
path = "src/main.rs"
