[package]
name = "runewarp"
version = "0.1.0"
edition = "2024"
description = "Private tunneling for TLS passthrough"
readme = "README.md"
homepage = "https://runewarp.com"
repository = "https://github.com/runewarp/runewarp"
license = "Apache-2.0"
keywords = ["tunnel", "port-forwarding", "remote-access", "tls-passthrough", "nat-traversal"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "ring", "tls12"] }
rustls-acme = { version = "0.15.2", default-features = false, features = ["ring", "tokio", "tls12", "webpki-roots"] }
rcgen = "0.14.8"
quinn = { version = "0.11.9", default-features = false, features = ["log", "runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23.35", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
time = "0.3.47"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "1.1.2"
x509-parser = "0.18.1"

[dev-dependencies]
assert_cmd = "2.2.2"
proptest = "1.6.0"
tempfile = "3.27.0"

[[bin]]
name = "runewarp"
path = "src/main.rs"
